<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id = "@+id/errorLoadingUsers"
    android:background="@drawable/lines"
    android:gravity="center"
    android:focusable="true"
    android:clickable="true"
    android:orientation="vertical"
    android:layout_centerInParent="true">

    <ImageView
        android:id="@+id/error_image"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:contentDescription="@string/error_image_description"
        android:src="@drawable/baseline_error_24_white" />

    <TextView
        android:id="@+id/error_msg_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/something_went_wrong"
        android:textColor="@color/white"
        android:gravity="center" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/retry"
        app:icon="@drawable/baseline_restart_alt_24"
        app:iconGravity="start"
        android:backgroundTint="?attr/colorPrimary"
        app:cornerRadius="18dp" />

</LinearLayout>